[tool.poetry]
name = "arcli"
version = "0.1.0"
description = "A TravisCI inspired builder"
authors = ["Guilherme Scaranse"]
license = "Apache-2.0"
readme = "README.md"

repository = "https://github.com/guiscaranse/arcli"
homepage = "https://github.com/guiscaranse/arcli"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
